--- a/style/app.css
+++ b/style/app.css
@@ -28,6 +28,20 @@ a-scene {
     transform: translateY(-50%);
 }
 
+.popover {
+    background-color: rgb(236, 215, 191);
+    position: fixed;
+    border-radius: 20px;
+    left: 0;
+    right: 0;
+    width: 70%;
+    margin: auto;
+    padding: 20px;
+    top: 50%;
+    z-index: 10;
+    transform: translateY(-50%);
+}
+
 #url-input {
     width: 100%;
     margin-top: 10px;
